--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,7 @@ body {
     text-align: center;
   }
   
-  .startbutton,
-  .playagainbutton {
+  .startbutton,.playagainbutton {
     display: inline-block;
     padding: 10px 20px;
     background-color: #007bff;
